# generative_ai

./: .gitignore  README.md
text_summarizer_api/: README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
text_summarizer_api/.devcontainer/: devcontainer.json
text_summarizer_api/backend/: app.py  models.py
text_summarizer_api/backend/summarizer/: pipeline.py
text_summarizer_api/frontend/: index.html
text_summarizer_api/frontend/scripts/: main.js
text_summarizer_api/frontend/styles/: container-1.css  global_styles.css
text_summarizer_api/tests/test_backend/: test_fastapi.py
text_summarizer_api/tests/test_frontend/: conftest.py  test_container_1.py
