[project]
name = "text-summarizer-api"
version = "0.1.0"
description = "uses generative ai to summarize information into more compact form"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "selenium>=4.39.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
